@@ -19,6 +19,7 @@ ChangeLog
     * Added RegistrationStatus constants
     * Added code attribute to Printer
     * Added filename length and forbidden characters check
+    * Added foldername length check
 
 0.5.0 (2021-07-14)
     * FILE_CHANGED event sends free_space
